--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <option value="feedback">Feedback</option>
         <option value="general">Sonstiges</option><!-- help -->
     </select>
-    <div class="notification" id="subject_notification">Bitte wähle ein Betreff ein</div>
+    <div class="notification" id="subject_notification">Bitte wähle ein Betreff aus</div>
     </div>
     <div class="faqs" id="presales">
     <div class="title">Häufig gestellte Fragen zum Thema Fragen vor dem Kauf:</div>
