dynamically populate form by locale

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <textarea id="support_contact_form_message" class="support_contact_form_input_area"></textarea>
         </div>
         <div id="support_contact_form_submit">
-            <input type="submit" class="support_contact_form_submit_button" value="Senden"/>
+            <input id="support_contact_form_submit_button" type="submit" class="support_contact_form_submit_button" />
         </div>
     </form>
 </div>
