dynamically load faq links

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="support_contact_form_label"><label for="support_contact_form_subject"></label></div>
             <select name="support_contact_form_subject" id="support_contact_form_subject" class="support_contact_form_input_field"></select>
         </div>
+        <div id="support_contact_form_faq"></div>
         <div id="support_contact_form_name_input" class="support_contact_form_input">
             <div class="support_contact_form_label"><label for="support_contact_form_name"></label></div>
             <input type="text" id="support_contact_form_name" class="support_contact_form_input_field" />
