validates name on submit

--- a/index.html
+++ b/index.html
@@ -18,20 +18,23 @@
         </div>
         <div id="support_contact_form_faq"></div>
         <div id="support_contact_form_name_input" class="support_contact_form_input">
-            <div class="support_contact_form_label"><label for="support_contact_form_name"></label></div>
-            <input type="text" id="support_contact_form_name" class="support_contact_form_input_field" />
+            <div class="support_contact_form_label"><label for="support_contact_form_name_input_field"></label></div>
+            <input type="text" id="support_contact_form_name_input_field" class="support_contact_form_input_field" />
+            <div id="support_contact_form_name_input_field_notification" class="support_contact_form_notification"></div>
         </div>
         <div id="support_contact_form_mail_input" class="support_contact_form_input">
-            <div class="support_contact_form_label"><label for="support_contact_form_email"></label></div>
-            <input type="email" id="support_contact_form_email" class="support_contact_form_input_field" />
+            <div class="support_contact_form_label"><label for="support_contact_form_email_input_field"></label></div>
+            <input type="email" id="support_contact_form_email_input_field" class="support_contact_form_input_field" />
+            <div id="support_contact_form_email_input_field_notification" class="support_contact_form_notification"></div>
         </div>
         <div id="support_contact_form_url_input" class="support_contact_form_input">
-            <div class="support_contact_form_label"><label for="support_contact_form_url"></label></div>
-            <input type="url" id="support_contact_form_url" value="http://"  class="support_contact_form_input_field" />
+            <div class="support_contact_form_label"><label for="support_contact_form_url_input_field"></label></div>
+            <input type="url" id="support_contact_form_url_input_field" value="http://"  class="support_contact_form_input_field" />
+            <div id="support_contact_form_url_input_field_notification" class="support_contact_form_notification"></div>
         </div>
         <div id="support_contact_form_message_input" class="support_contact_form_input">
-            <div class="support_contact_form_label"><label for="support_contact_form_message"></label></div>
-            <textarea id="support_contact_form_message" class="support_contact_form_input_area"></textarea>
+            <div class="support_contact_form_label"><label for="support_contact_form_message_input_area"></label></div>
+            <textarea id="support_contact_form_message_input_area" class="support_contact_form_input_area"></textarea>
         </div>
         <div id="support_contact_form_submit">
             <input id="support_contact_form_submit_button" type="submit" class="support_contact_form_submit_button" />
