--- a/index.html
+++ b/index.html
@@ -13,35 +13,36 @@
 <div id="support_contact_form_wrapper">
     <form id="support_contact_form" action="" novalidate>
         <div id="support_contact_form_subject_input" class="support_contact_form_input">
-            <div class="support_contact_form_label"><label for="support_contact_form_subject"></label></div>
+            <div class="support_contact_form_label" id="support_contact_form_subject_input_label"></div>
             <select name="support_contact_form_subject" id="support_contact_form_subject" class="support_contact_form_input_field"></select>
         </div>
         <div id="support_contact_form_faq"></div>
         <div id="support_contact_form_name_input" class="support_contact_form_input support_contact_form_input_content">
-            <div class="support_contact_form_label"><label for="support_contact_form_name_input_field"></label></div>
+            <div class="support_contact_form_label" id="support_contact_form_name_input_label"></div>
             <input type="text" id="support_contact_form_name_input_field" class="support_contact_form_input_field" />
             <div id="support_contact_form_name_input_field_notification" class="support_contact_form_notification"></div>
         </div>
         <div id="support_contact_form_mail_input" class="support_contact_form_input support_contact_form_input_content">
-            <div class="support_contact_form_label"><label for="support_contact_form_email_input_field"></label></div>
+            <div class="support_contact_form_label" id="support_contact_form_mail_input_label"></div>
             <input type="email" id="support_contact_form_email_input_field" class="support_contact_form_input_field" />
             <div id="support_contact_form_email_input_field_notification" class="support_contact_form_notification"></div>
         </div>
         <div id="support_contact_form_url_input" class="support_contact_form_input support_contact_form_input_content">
-            <div class="support_contact_form_label"><label for="support_contact_form_url_input_field"></label></div>
+            <div class="support_contact_form_label" id="support_contact_form_url_input_label"></div>
             <input type="url" id="support_contact_form_url_input_field" value="http://"  class="support_contact_form_input_field" />
 
             <div id="support_contact_form_email_to_url_input_field_notification" class="support_contact_form_notification"></div>
             <div id="support_contact_form_url_input_field_notification" class="support_contact_form_notification"></div>
         </div>
         <div id="support_contact_form_message_input" class="support_contact_form_input support_contact_form_input_content">
-            <div class="support_contact_form_label"><label for="support_contact_form_message_input_area"></label></div>
+            <div class="support_contact_form_label" id="support_contact_form_message_input_label"></div>
             <textarea id="support_contact_form_message_input_area" class="support_contact_form_input_area"></textarea>
         </div>
         <div id="support_contact_form_submit">
             <input id="support_contact_form_submit_button" type="submit" class="support_contact_form_submit_button" />
         </div>
     </form>
+
 </div>
 </body>
 </html>
